syntax = "proto3";

package backend.v1;

import "google/protobuf/timestamp.proto";

message User {
  int32 id = 1;
  string username = 2;
  bool is_admin = 4;
  google.protobuf.Timestamp created_at = 5;
  optional google.protobuf.Timestamp updated_at = 6;
}

message Contest {
  int32 id = 1;
  string name = 2;
  string slug = 3;
  string description = 4;
  int32 task_id = 5;
  google.protobuf.Timestamp start_at = 6;
  google.protobuf.Timestamp end_at = 7;
}